--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,238 @@
-.App {
+.ui.top.menu {
+  border-radius: 0;
+  margin-bottom: 0;
+  border-top: none;
+}
+#package-search {
+  flex: 1 !important;
+  margin-left: 1px;
+  margin-top: 1px;
+}
+#package-search:focus-within {
+  outline:none; 
+  -webkit-box-shadow: 0px 0px 3px  #4D90FE;
+  box-shadow: 0px 0px 3px  #4D90FE;
+}
+
+#package-search {
+  border-radius: 0;
+  margin: 0;
+}
+
+.masthead {
+  zoom: 1.5;
+  padding-top: 5rem;
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.ui.button.getting-started {
+  margin-top: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.ui.attached.segment.package-list {
+  padding-top: 0;
+  border-bottom: 0;
+}
+
+.package-item {
+  padding: 16px 4px 8px 4px;
+  border-bottom: 1px solid #ccc;
+}
+
+.package-item * {
+  font-family: 'Source Sans Pro', 'Lucida Grande', sans-serif !important;
+  -webkit-font-smoothing: antialiased;
+}
+
+.package-item a.package-name.ui.header {
+  font-size: 20px !important;
+  padding: 22px 0 8px 0;
+  color: #000 !important;
+}
+
+.package-description {
+  color: rgba(0,0,0,0.6);
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.item.package-item .header.package-name {
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+.package-misc {
+  color: rgba(0,0,0,0.5);
+  padding-bottom: 1rem;
+  padding-left: 0.5rem;
+}
+
+.page-header .package-misc span {
+  margin-right: 0.5rem;
+}
+
+.package-list .package-misc span, .package-misc a, .username {
+  font-family: "Fira Mono", "Andale Mono", "Consolas", monospace !important;
+}
+
+.username {
+  color: rgba(0,0,0,0.5);
+  font-weight: normal;
+  font-size: 1em;
+}
+
+.package-misc span {
+  margin-left: 0.5rem;
+}
+
+.ui.avatar.image {
+  border-radius: 0.1rem;
+}
+
+.page-header {
+  padding-top: 4rem;
+  padding-bottom: 1rem;
+  background: #eee;
+  margin-bottom: 2rem;
+}
+
+.ui.labeled.icon.button.install-box {
+  clear: both;
+  width: 100%;
+  text-align: left;
+  font-family: "Fira Mono", "Andale Mono", "Consolas", monospace !important;
+  background: #fff !important;
+  user-select: auto !important;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  padding-left: 1rem !important;
+}
+
+.flash.ui.message {
+  position: fixed;
+  right: 2rem;
+  width: 300px;
+  margin-bottom: 2rem;
+}
+
+.text.content {
+  margin-top: 3rem;
+  max-width: 700px !important;
+  margin-bottom: 3rem;
+}
+
+.markdown.content p, .markdown.content li {
+  font-size: 1.2rem;
+  line-height: 160%;
+}
+
+.markdown img {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    max-width: 100%;
+    background-color: transparent;
+}
+
+.package-misc .ui.label {
+  border-radius: 2px;
+  font-family: 'Source Sans Pro', 'Lucida Grande', sans-serif !important;
+  font-size: 14px !important;
+  font-weight: normal;
+  background-color: rgba(0,0,0,.05) !important;
+  padding: 4px 8px 4px 8px;
+  line-height: 16.1px;
+  cursor: pointer;
+}
+
+.package-misc .ui.label:hover {
+  background-color: rgba(0,0,0,.1) !important;
+}
+
+.ui.top.menu .ui.button, .ui.button {
+  font-size: 1rem;
+  border-radius: 2px;
+}
+
+.ui.basic.login.button {
+  margin-left: 0.5rem !important;
+  border: none !important;
+  box-shadow: none !important;
+  background: rgba(0,0,0,0.05) !important;
+}
+
+.dropzone {
+  flex: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 20px;
+  border-width: 2px;
+  border-radius: 2px;
+  border-color: #eeeeee;
+  border-style: dashed;
+  background-color: #fafafa;
+  color: #bdbdbd;
+  outline: none;
+  transition: border .24s ease-in-out;
+  margin-bottom: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.dropzone:focus {
+  border-color: #2196f3;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dropzone.disabled {
+  opacity: 0.6;
+}
+
+.upload-item {
+  flex: 1;
+  border-width: 2px;
+  border-color: #eeeeee;
+  border-style: dashed;
+  padding: 8px;
+}
+
+.markdown.empty {
+  text-align: center;
+  padding-top: 3rem !important;
+}
+
+.markdown.empty .ui.header.disabled {
+  color: #ccc;
+}
+
+.markdown h1, .markdown h2 {
+  border-bottom: 1px solid #eaecef;
+  padding-bottom: .3em;
+}
+
+.markdown {
+  padding-bottom: 1rem;
+  font-size: 16px;
+  max-width: 800px;
+}
+
+.markdown, .markdown p {
+  line-height: 24px;
+}
+
+.markdown .anchor {
+  float: left;
+  line-height: 1;
+  margin-left: -20px;
+  padding-right: 4px;
+}
+
+.markdown .anchor svg {
+  visibility: hidden;
+}
+
+.markdown h1:hover .anchor>svg, .markdown h2:hover .anchor>svg, .markdown h3:hover .anchor>svg, .markdown h4:hover .anchor>svg, .markdown h5:hover .anchor>svg, .markdown h6:hover .anchor>svg {
+  visibility: visible;
+}
+
+.hljs {
+  padding: 16px;
 }
